2008-09-10  Rob Bradford  <rob@robster.org.uk>

	* libanjuta/anjuta-status.c (anjuta_status_dispose),
	anjuta_status_instance_init), (anjuta_status_progress_add_ticks):
	Fix #529468: Use weak pointers to avoid acting on widgets that have
	been destroyed.

2008-09-03  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
	* configure.ac:
	Improved subversion detection (#550628)

2008-09-11  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/macro/macro-dialog.c:
	Fix a bug (dialog will never be displayed again) when closing
	macro dialog with close button

	* plugins/macro/plugin.c:
	Use correct variable to track current editor

	* plugins/macro/macro-util.c,
	plugins/macro/macro-db.c:
	Fix some memory leaks 

2008-09-11  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/templates/anjuta-plugin.wiz,
	plugins/project-wizard/templates/anjuta-plugin-vala.wiz,
	plugins/project-wizard/templates/cpp.wiz,
	plugins/project-wizard/templates/django.wiz,
	plugins/project-wizard/templates/gcj.wiz,
	plugins/project-wizard/templates/gnome.wiz,
	plugins/project-wizard/templates/gtk.wiz,
	plugins/project-wizard/templates/gtkmm.wiz,
	plugins/project-wizard/templates/java.wiz,
	plugins/project-wizard/templates/mkfile.wiz,
	plugins/project-wizard/templates/minimal.wiz,
	plugins/project-wizard/templates/python.wiz,
	plugins/project-wizard/templates/sdl.wiz,
	plugins/project-wizard/templates/terminal.wiz,
	plugins/project-wizard/templates/wxwin.wiz,
	plugins/project-wizard/templates/xlib.wiz,
	plugins/project-wizard/templates/xlib-dock.wiz,
	plugins/project-wizard/templates/extract-translatable-strings.pl,
	plugins/project-wizard/templates/translatable-strings.h:
	Fix #551574 Project names and descriptions are not translatable

2008-09-10  Rob Bradford  <rob@linux.intel.com>

	* libanjuta/anjuta-version.h.in:
	* configure.in:
	Fix #551684: Wrong AC substitutions in anjuta-version.h.

2008-09-10  Johannes Schmid  <jhs@gnome.org>
