@@ -1,3 +1,14 @@
+2008-09-12  Sébastien Granjoux  <seb.sfo@free.fr>
+
+	* plugins/symbol-browser/plugin.c,
+	plugins/debug-manager/breakpoints.c,
+	plugins/document-manager/plugin.c,
+	plugins/editor/plugin.c:
+	Fix warnings, some documents could have no associated file
+
+	* plugins/indent/plugin.c:
+	Need to use a different watch name to track current editor
+
 2008-09-10  Rob Bradford  <rob@robster.org.uk>
 
 	* libanjuta/anjuta-status.c (anjuta_status_dispose),
